fix(toggle): stretch tables across columns, decrease top table margin

--- a/Content/Styles/Toggle/Site.scss
+++ b/Content/Styles/Toggle/Site.scss
@@ -111,7 +111,7 @@ $hamburger: '\f0c9';
 }
 
 .answerContainer {
-  margin: 50px;
+  margin: 30px 10px 10px 0;
 }
 
 .answerContainer table {
